# privacypredictions

./: .env.example  .gitignore  README.md
ShadowWire/: .gitignore  .npmignore  BROWSER_SETUP.md  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
ShadowWire/examples/: browser-usage.html  browser-webpack-example.ts  client-side-proofs.ts  deposit.ts  external-transfer.ts  internal-transfer.ts  react-example.tsx  withdraw.ts
ShadowWire/src/: auth.ts  client.ts  constants.ts  errors.ts  index.ts  tokens.ts  types.ts  utils.ts  zkProofs.ts
ShadowWire/wasm/: settler_wasm.js
backend/: .env.example  package-lock.json  package.json
backend/circuits/ai_response_verifier/: Nargo.toml
backend/circuits/obsidian_batch_verifier/: Nargo.toml
backend/scripts/: transfer-token2022.ts
backend/src/: index.ts
backend/src/config/: env.ts
backend/src/routes/: ai.ts  (+12 more)
circuits/groth16/: ai_response_verifier.circom  package-lock.json  package.json  setup-keys.js  setup.js
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
programs/: Anchor.toml  Cargo.toml
programs/privacy-trading/: Arcium.toml  Cargo.toml
programs/privacy-trading/encrypted-ixs/: Cargo.toml
programs/privacy-trading/encrypted-ixs/src/: lib.rs
programs/privacy-trading/src/: lib.rs
programs/zk-verifier/: Cargo.toml
programs/zk-verifier-native/: Cargo.toml
programs/zk-verifier-native/src/: lib.rs
programs/zk-verifier/src/: lib.rs
scripts/: deploy-programs.sh
(+38 files in other folders)
