[package]
name = "privacy-trading"
version = "0.1.0"
description = "Privacy-preserving prediction market trading with Arcium MPC"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "privacy_trading"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
arcium-anchor = { version = "0.1.1", features = ["cpi"] }
arcium-client = "0.1.5"
