[package]
name = "zk-verifier"
version = "0.1.0"
description = "On-chain ZK proof verification for AI responses using Noir/UltraHonk"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
constant_time_eq = "=0.3.1"
